<!--
  ~ Copyright (c) 2016-2018. Vijai Chandra Prasad R.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses
  -->

<resources>
    <string name="donate_info">Support Development</string>
    <string name="donate_dollar_1">Support with $1</string>
    <string name="donate_dollar_2">Support with $2</string>
    <string name="donate_dollar_5">Support with $5</string>
    <string name="donate_paypal">Support with whatever you wish using paypal</string>
</resources>
